# BalatroQt

./: .gitignore  125-作业报告.tex  125-作业报告.toc  AGENTS.md  BalatroQt.files  BalatroQt.includes  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.tmp.13188.31fb67f61509  README.md  main.cpp  录屏脚本.md  演示脚本V2.1.md  演示脚本V2.2.md
.claude/: settings.local.json
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: BalatroQt.config.9EC936F4148FC83A.idx  CMakeCXXCompilerId.cpp.7E8A8895A08B4108.idx  __stddef_nullptr_t.h.45BD9DAB0DDFFE78.idx  __stddef_ptrdiff_t.h.1562DE7265B3833F.idx  __stddef_size_t.h.BBD409E53507E26C.idx  align.h.F1552BD3DD305725.idx  alloc_traits.h.85867FE5A67E5A49.idx  allocated_ptr.h.CDF8C532A1A9AC14.idx  animatedblindchip.h.7A1C75F6E68E1D07.idx  array.26B74003B85546B3.idx  atomic.F62AF69E231766FB.idx  auto_ptr.h.1474AAD0CD1A143C.idx  bessel_function.tcc.8E23C988593AF43C.idx  beta_function.tcc.F1D2B2C076C392D0.idx  bit.A9A2511053D8DC1A.idx  blindselectwidget.cpp.C866ABAF8DE2B69D.idx  blindselectwidget.h.4D1097EB0ECB0814.idx  boosterpack.cpp.7B04DC6618791915.idx  boosterpack.h.B490DC20D5A949CB.idx  bossblind.cpp.9A6B9B450036B25B.idx  bossblind.h.32562D0FEDFC97A8.idx  carddata.cpp.633B8EC9489C9406.idx  carddata.h.FC8D8954EB032F82.idx  carditem.cpp.26A55173D53875CF.idx  carditem.h.4E668664EEB75EDC.idx  char_traits.h.FDD012BA98ADB0FD.idx  cmath.FC9CE6783A6CF08D.idx  constants.h.253D1886C06515D4.idx  consumable.cpp.0028E70748645570.idx  consumable.h.C699B352D0D5E209.idx  consumableitem.cpp.0B11C70C3A272FD1.idx  consumableitem.h.16FEB24CC20D0F73.idx  corecrt.h.DC10C62DAD596B9E.idx  corecrt_startup.h.50C1230E329616FA.idx  cpp_type_traits.h.1255BF6B9C2E47A5.idx  cstddef.75A7818CC72C6640.idx  cstdlib.9CE82F6989F6117C.idx  cwchar.776F2E3545319B50.idx  deck.cpp.16CA806E9B8E7883.idx  deck.h.CE690430E4993556.idx  (+111 more)
BalatroQt/: main.cpp
BalatroQt/resources/sounds/: resources.qrc
BalatroQt/src/audio/: audiomanager.cpp  audiomanager.h
BalatroQt/src/card/: carddata.h  carditem.cpp  carditem.h  cardshadow.cpp  consumable.cpp  consumableitem.cpp  consumableitem.h  jokeritem.cpp  jokeritem.h
BalatroQt/src/game/: boosterpack.cpp  boosterpack.h  bossblind.h  deck.h  gamedeck.h  gamestate.cpp  gamestate.h  handevaluator.h  tag.h
BalatroQt/src/ui/: animatedblindchip.cpp  animatedblindchip.h  balatrographicsview.cpp  blindselectwidget.cpp  blindselectwidget.h  deckselectwidget.cpp  deckselectwidget.h  deckviewwidget.cpp  deckviewwidget.h  finalpostprocesswidget.cpp  floatingscore.h  mainwindow.cpp  mainwindow.h  packopenwidget.cpp  roundendoverlay.cpp  shopwidget.cpp
BalatroQt/src/utils/: balatromotion.cpp  constants.h  gpueffectsrenderer.cpp  shadereffects.cpp  shadereffects.h
balatro_original_code/src/game/: gamestate.cpp  gamestate.h
docs/: joker_150_current_reference.md
docs/superpowers/plans/: 2026-06-10-cpp-concept-items.md  2026-06-10-queue-deck.md  2026-06-11-shallowcopy-iterator-visuals.md
docs/superpowers/specs/: 2026-06-05-repo-cleanup-design.md  2026-06-10-queue-deck-design.md  2026-06-11-shallowcopy-iterator-visuals-design.md
resources/: resources.qrc
resources/sounds/: resources.qrc
src/audio/: audiomanager.cpp  audiomanager.h
src/card/: carddata.cpp  carddata.h  cardfloat.cpp  cardfloat.h  carditem.cpp  carditem.h  cardshadow.cpp  cardshadow.h  consumable.cpp  consumable.h  consumableitem.cpp  consumableitem.h  deckskin.cpp  deckskin.h  joker.cpp  joker.h  jokereffect.cpp  jokereffect.h  jokeritem.cpp  jokeritem.h
src/game/: boosterpack.cpp  boosterpack.h  bossblind.cpp  bossblind.h  deck.cpp  deck.h  demoscript.cpp  demoscript.h  gamedeck.cpp  gamedeck.h  gamestate.cpp  gamestate.h  handevaluator.cpp  handevaluator.h  shop.cpp  shop.h  tag.cpp
src/ui/: animatedblindchip.cpp  animatedblindchip.h  balatrographicsview.cpp  balatrographicsview.h  balatroinfopanel.cpp  balatroinfopanel.h  blindselectwidget.cpp  blindselectwidget.h  cardtooltipformat.h  deckselectwidget.cpp  deckselectwidget.h  deckviewwidget.cpp  deckviewwidget.h  dynamicbackgrounditem.cpp  dynamicbackgrounditem.h  finalpostprocesswidget.cpp  finalpostprocesswidget.h  floatingscore.cpp  floatingscore.h  gpucardoverlay.cpp  gpucardoverlay.h  mainwindow.cpp  mainwindow.h  packopenwidget.cpp  packopenwidget.h  roundendoverlay.cpp  roundendoverlay.h  scoreeffectsoverlays.cpp  scoreeffectsoverlays.h  shopsignwidget.cpp  shopsignwidget.h  shopwidget.cpp  shopwidget.h  splashshaderoverlay.cpp  splashshaderoverlay.h
src/utils/: balatromotion.h  constants.h  gpueffectsrenderer.cpp  gpueffectsrenderer.h  shadereffects.cpp  shadereffects.h
